# vocalis_app

./: README.md  create_project.sh
vocalis-challenge/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
vocalis-challenge/services/shopping_cart_api/: Dockerfile
vocalis-challenge/services/shopping_cart_api/app/: crud.py  main.py  models.py
vocalis-challenge/src/: main.py
vocalis-challenge/src/agent/: vocalis_agent.py
vocalis-challenge/src/agent/tools/: shopping_cart.py
vocalis-challenge/src/api/v1/: api.py
vocalis-challenge/src/api/v1/endpoints/: vocalis_websocket.py
vocalis-challenge/src/core/: config.py
vocalis-challenge/src/services/: stt.py  tts.py
vocalis-challenge/tests/agent/: test_shopping_cart_tool.py
