[tool.poetry]
name = "vocalis-challenge"
version = "0.1.0"
description = "Real-time voice agent for the Ego Eimi challenge."
authors = [" <ramonvcabreu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"  # <-- LUGAR CORRETO
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
redis = "^5.0.4"
celery = "^5.4.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
